--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -6,7 +6,7 @@ http://ionicframework.com/docs/theming/ */
   /** primary **/
   --ion-color-primary: #66BB6A;
 	--ion-color-primary-rgb: 102,187,106;
-	--ion-color-primary-contrast: #000000;
+	--ion-color-primary-contrast: #ffffff;
 	--ion-color-primary-contrast-rgb: 0,0,0;
 	--ion-color-primary-shade: #5aa55d;
 	--ion-color-primary-tint: #75c279;
